tests/invalid/StaticVar_Invalid_9.whiley
final int x = {f:x}.f